fix jumping issue when marking notification as read

--- a/src/assets/scss/components/_notification.scss
+++ b/src/assets/scss/components/_notification.scss
@@ -9,7 +9,7 @@
   border-radius: 1rem;
 
   &:not(:last-child) {
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
   }
 
   &__inner-content {
